<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- STRINGS -->
    <string name="trips_title">My Trips
    </string>
    <string name="action_settings">Settings
    </string>
    <string name="plus">+
    </string>
    <string name="name">Name:
    </string>
    <string name="startDate">Start Date:
    </string>
    <string name="endDate">End Date:
    </string>
    <string name="tripType">Trip Type:
    </string>
    <string name="nameHint">Enter trip name
    </string>
    <string name="startDateHint">Enter start date (mm/dd/yyyy)
    </string>
    <string name="endDateHint">Enter end date (mm/dd/yyyy)
    </string>
    <string name="tripTypeHint">Enter trip type
    </string>
    <string name="createNewTrip">Create a new trip!
    </string>
    <string name="menu_delete">Delete
    </string>
    <string name="menu_add">Add
    </string>
    <string name="no_trips">You don\'t have any trips!
    </string>
    <string name="category_name">Category Name Here
    </string>
    <string name="quantity">Quantity:
    </string>
    <string name="createNewItem">Add item to (insert cat here)
    </string>
    <string name="location_hint">Location Hint:
    </string>
    <string name="more_info">More Info:
    </string>
    <string name="putQuantityHint">More Info:
    </string>
    <string name="moreInfoHint">Notes:
    </string>
    <string name="shareButton">Share your trips via email!
    </string>
    <string name="packed">Packed:
    </string>
    <string name="itemNameHint">Enter item name
    </string>
    <string name="no_categories">You don\'t have any categories for this trip!
    </string>
    <string name="no_items">You don\'t have any items for this category!
    </string>
    
    <!-- Strings added by Advik-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="new_category">Category</string>
    <string name="new_item">Item</string>
    <string name="share">Share</string>
    <string name="title_activity_new_category">NewCategoryActivity</string>
    <string name="create">Create</string>
    <string name="new_category_hint">enter new category</string>
    <string name="title_activity_new_item">NewItemActivity</string>
    <string name="new_item_hint">enter new item</string>
    <string name="title_activity_trips_view">TripsViewActivity</string>
    <string name="new_trip">New Trip</string>
    <string name="itemQuantity_hint">How many will you need?</string>
   
    <string name="extraNotes_hint">Any other information?</string>

    <string-array name="quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string-array name="trip_types">
        <item>Business</item>
        <item>Beach</item>
        <item>Sight-Seeing</item>
        <item>Hiking</item>
        <item>Holiday</item>
        <item>Underwater Sea Excursion</item>
    </string-array>

    <string name="app_name"><u><b><i> PackTRAK </i></b></u></string>
    <string name="view_trips" ><b>View Trips</b>
    </string>
    <string name="export_trips" ><b>Export Trips </b>
    </string>

</resources>
