<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewItemActivity" >
	
    <EditText
        android:id="@+id/itemName_editText"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_item_hint" />
    
    <EditText
        android:id="@+id/itemQuantity_editText"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:hint="@string/itemQuantity_hint" />
    <EditText
        android:id="@+id/locationHint_editText"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:hint="@string/location_hint" />
    <EditText
        android:id="@+id/extraNotes_editText"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:hint="@string/extraNotes_hint" />
    

    <Button 
        android:id="@+id/btn_2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/create"
        android:onClick="createItem"/>

</LinearLayout>
