<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/background_gradient"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="105dp"
            android:textColor="@color/title_color"
            android:gravity="center"
            android:text="@string/app_name" />


    <ImageView android:id="@+id/image_view"
               android:adjustViewBounds="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/globewithsuitcasebackground"/>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    tools:context=".MainActivity">


        <Button
                android:id="@+id/home_button1"
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/view_trips"
                android:textSize="43dp"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="10dp"
                android:textColor="@color/button1_color"
                android:background="@drawable/fancybuttonbackground"
                android:drawableBottom="@drawable/eye"
                android:onClick="goToTripsViewActivity"/>

        <Button
                android:id="@+id/home_button2"
                android:layout_height="fill_parent"
                android:layout_width="wrap_content"
                android:text="@string/export_trips"
                android:textSize="43dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:textColor="@color/button2_color"
                android:background="@drawable/fancybuttonbackground"
                android:drawableBottom="@drawable/greenarrowfinal"
                android:onClick="goToTripsExportActivity"/>


    </RelativeLayout>

</LinearLayout>
